--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>First World</title>
+<title>Dog</title>
 </head>
 <body>
-    <H1>Hello World</H1>
+    <H1>SNOWBALL</H1>
+    <img src="snowball.png">
 </body>
 </html>
