--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Dog</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Button</title>
+    <style>
+        /* Center the button using Flexbox */
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Define the style for the red button */
+        .red-button {
+            background-color: red;
+            color: white;
+            padding:100px 100px;
+            border: none;
+            border-radius: 500px;
+            cursor: pointer;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
-    <H1>SNOWBALL</H1>
-    <img src="snowball.png">
+
+    <!-- Use the "red-button" class for the button element -->
+    <button class="red-button" onclick="RandomMoveyaysound()">button</button>
+
+    <!-- Add an audio element with the sound source -->
+    <audio id="yay" src="C:\Users\okayy\Documents\Leo Documents\HTML\funnyyay.mp3"audio>
+
+    <script>
+        function RandomMoveyaysound() {
+
+            var audio = document.getElementById('yay');
+            audio.play();
+            const button = document.querySelector('.red-button');
+            const maxWidth = window.innerWidth - button.clientWidth;
+            const maxHeight = window.innerHeight - button.clientHeight;
+
+            const randomX = Math.floor(Math.random() * maxWidth);
+            const randomY = Math.floor(Math.random() * maxHeight);
+
+            button.style.left = `${randomX}px`;
+            button.style.top = `${randomY}px`;
+        }
+    </script>
+
 </body>
 </html>
