--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <button class="red-button" onclick="RandomMoveyaysound()">button</button>
 
     <!-- Add an audio element with the sound source -->
-    <audio id="yay" src="C:\Users\okayy\Documents\Leo Documents\HTML\funnyyay.mp3"audio>
+    <audio id="yay" src="funnyyay.mp3"audio>
 
     <script>
         function RandomMoveyaysound() {
